# fmcmcp

./: .dockerignore  .env_example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  fmc_mcp_server.py  fmcmcp.py  pyproject.toml  requirements.txt
app/: fmc_mcp_server.py  requirements.txt  slim_specs.py
fmcmcp/: __init__.py  __main__.py  __version__.py  server.py
