[tool.poetry]
name = "fmcmcp"
version = "0.20250126.0"
description = "Model Context Protocol server for Cisco Firepower Management Center"
authors = ["Dax Mickelson <github@daxm.net>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/daxm/fmcmcp"
repository = "https://github.com/daxm/fmcmcp"
documentation = "https://github.com/daxm/fmcmcp/blob/main/CLAUDE.md"
keywords = ["mcp", "cisco", "firepower", "fmc", "openapi", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking :: Firewalls",
]

[tool.poetry.dependencies]
python = "^3.11"
mcp = "^1.0.0"
aiohttp = "^3.9.0"
urllib3 = "^2.0.0"
mcp-openapi-proxy = ">=0.1.0"
httpx = "^0.27.0"
pipx = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"

[tool.poetry.scripts]
fmc-mcp-server = "fmcmcp.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
