[tool.poetry]
name = "fmcmcp"
version = "0.20250126.0"
description = "MCP server for Cisco Firepower Management Center"
authors = ["Dax Mickelson <github@daxm.net>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fmcmcp.py"}]

[tool.poetry.dependencies]
python = "^3.11"
mcp = "^1.0.0"
aiohttp = "^3.9.0"
httpx = "^0.28.0"
mcp-openapi-proxy = ">=0.1.0"

[tool.poetry.scripts]
fmcmcp = "fmcmcp:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
